# qubogen

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  qubo.ipynb  qubo.md  setup.cfg  setup.py
notebooks/: examples.ipynb  examples.md  number_partitioning.ipynb
qubogen/: __init__.py  data.py  qubo.py  setup.cfg  utils.py
qubogen/tests/: test_qubo.py  utils.py
tests/: test_data.py  test_qubo.py  test_utils.py  utils.py
