[metadata]
name = qubogen
version = attr: qubogen.__version__
description = QUBO matrix generator on major combinatorial optimization problems written in Python
long_description = file: README.md, LICENSE
keywords = qubo, combinatorial optimization
license = MIT
classifires = 
  Programming Language :: Python :: 3.7
url=https://github.com/tamuhey/qubogen
author = tamuhey
author_email = tamuhey@gmail.com

[options]
packages = find:
install_requires = 
  networkx >= 2.2
setup_requires = pytest-runner
tests_require = pytest; dwave-qbsolv
python_requires = >=3.7

[options.packages.find]
exclude = tests

[aliases]
test=pytest

[tool:pytest]
python_files=tests/*py